feat: added cors configuration for PDI modal
